# bluing

./: .gitignore  Cargo.toml  build.rs
.obsidian/: workspace
assets/shaders/: batch_texture2d.glsl  texture2d.frag  texture2d.glsl  texture2d.vert  triangle.glsl
assets/shaders/shapes/: circle2d.glsl
render_derive/: Cargo.toml
render_derive/src/: lib.rs
src/: main.rs  render.rs  resources.rs  todo.md
src/render/: animation.rs  buffer.rs  data.rs  line_segment_renderer.rs  renderer.rs  shader.rs  subtexture.rs  texture.rs
src/render/renderer/: batch_renderer.rs
vault/: todo.md
vault/.obsidian/: workspace
vault/System/: Renderer.md
