[package]
name = "blue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "*", features= ["bundled"] }
gl = "0.14"
egui = "*"
egui_sdl2_gl = "*"
stb_image = "*"
glm = {version = "*",package = "nalgebra-glm"}
render_derive = { path = "render_derive" }

imgui = {version = "*"}
imgui-sdl2 = "*"
imgui-opengl-renderer = "*"
legion = "0.4.0"


[build-dependencies]
walkdir = "*"
